--- a/stylesheet1.scss
+++ b/stylesheet1.scss
@@ -31,9 +31,9 @@ $main-width: 500px;
 $navbar-bg: $cream; // navbar
 $navbar-fg: $saddlebrown; // navbar foreground elements
 $navbar-hl: $saddlebrown; // highlight color when hovering over navbar links
-$body-bg: $mistyrose; // page background 
-$body-color: $rosybrown; // page text 
-$footer-bg: $cream; // footer 
+$body-bg: $seashell; // page background 
+$body-color: $saddlebrown; // page text 
+$footer-bg: $saddlebrown; // footer 
 $link-color: $saddlebrown; // hyperlinks 
 
 // Inline code
