--- a/stylesheet1.scss
+++ b/stylesheet1.scss
@@ -6,10 +6,12 @@ $pale-blue: #D7E5F0;
 $darker-blue: #709FC0;
 $darkest-blue: #1E3F66;
 $cream: #FDFBF7;
+$white: #FFFFFF;
 $seashell: #FFF5EE;
 $gray: #64605f;
 $light-gray: #949799;
 $dark-gray: #333333;
+$black: #000000;
 $rust: #B7410E;
 $seagreen: #2E8B57;
 $darkseagreen: #8FBC8B;
@@ -18,6 +20,7 @@ $rosybrown: #BC8F8F;
 $mistyrose: #FFE4E1;
 $sienna: #A0522D;
 $saddlebrown: #8B4513;
+$darkred: #8B0000;
 
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -28,17 +31,17 @@ $main-font-size: 25px;
 $main-width: 500px;
 
 // Base document colors
-$navbar-bg: $cream; // navbar
-$navbar-fg: $saddlebrown; // navbar foreground elements
-$navbar-hl: $saddlebrown; // highlight color when hovering over navbar links
-$body-bg: $seashell; // page background 
-$body-color: $saddlebrown; // page text 
-$footer-bg: $saddlebrown; // footer 
-$link-color: $saddlebrown; // hyperlinks 
+$navbar-bg: $darkred; // navbar
+$navbar-fg: $white; // navbar foreground elements
+$navbar-hl: $darkred; // highlight color when hovering over navbar links
+$body-bg: $white; // page background 
+$body-color: $black; // page text 
+$footer-bg: $darkred; // footer 
+$link-color: $darkred; // hyperlinks 
 
 // Inline code
 $code-bg: $cream; // inline code background color
-$code-color: $saddlebrown; // inline code text color
+$code-color: $darkest-blue; // inline code text color
 
 // Code blocks
 $code-block-bg: $cream; // code block background color
@@ -50,9 +53,9 @@ $code-block-bg: $cream; // code block background color
 h1, h2 {
   letter-spacing: 3px;
   font-weight: 1000;
-  color: $rust;
+  color: $black;
 }
 
 h3 {
-  color: $dark-gray;
+  color: $darkred;
 }
