--- a/stylesheet1.scss
+++ b/stylesheet1.scss
@@ -25,7 +25,7 @@ $darkred: #8B0000;
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-$main-font-size: 20px;
+$main-font-size: 15px;
 
 // Widths 
 $main-width: 500px;
@@ -53,6 +53,7 @@ $code-block-bg: $cream; // code block background color
 h1, h2 {
   letter-spacing: 3px;
   font-weight: 1000;
+  font-size: 20px;
   color: $black;
 }
 
