--- a/stylesheet1.scss
+++ b/stylesheet1.scss
@@ -26,6 +26,7 @@ $darkred: #8B0000;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 $main-font-size: 15px;
+$footer-font-size: 15px;
 
 // Widths 
 $main-width: 500px;
