--- a/stylesheet1.scss
+++ b/stylesheet1.scss
@@ -23,13 +23,13 @@ $saddlebrown: #8B4513;
 $darkred: #8B0000;
 
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Raleway:ital,wght@0,100..900;1,100..900&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap');
 
 $main-font-size: 15px;
 $footer-font-size: 15px;
 
 // Widths 
-$main-width: 500px;
+$main-width: 1000px;
 
 // Base document colors
 $navbar-bg: $seagreen; // navbar
@@ -53,8 +53,8 @@ $code-block-bg: $cream; // code block background color
 /*-- scss:rules --*/
 h1, h2 {
   letter-spacing: 3px;
-  font-weight: 1000;
-  font-size: 20px;
+  font-weight: 700;
+  font-size: 25px;
   color: $black;
 }
 
